# discord-mastodon-repost

./: Cargo.toml  README.md
src/: discord.rs  login_state.rs  main.rs  persistence.rs  util.rs
src/http/: mod.rs
src/http/routes/: mod.rs  oauth_callback.rs
