[package]
name = "discord-mastodon-repost"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8.3"
aliri_braid = "0.4.0"
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
futures-util = "0.3.28"
indexmap = "1.9.3"
mastodon-async = { version = "1.2.1", default-features = false, features = ["rustls-tls"] }
mimalloc = "0.1.37"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-axum = "0.17.0"
shuttle-persist = "0.17.0"
shuttle-runtime = "0.17.0"
shuttle-secrets = "0.17.0"
shuttle-service = "0.17.0"
tempfile = "3.5.0"
tokio = "1.28.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
